--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
-  go_router: ^13.2.2
+  go_router: ^14.0.0
   kakao_flutter_sdk_user: ^1.9.1+2
   flutter_dotenv: ^5.1.0
+  dio: ^5.4.3+1
+  dio_cookie_manager: ^3.1.1
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
@@ -99,7 +102,7 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-  # example:
+  # partyguam:
   # fonts:
   #   - family: Schyler
   #     fonts:
