--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   dio: ^5.4.3+1
   dio_cookie_manager: ^3.1.1
   encrypt: ^5.0.3
+  intl: ^0.19.0
+  mask_text_input_formatter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
