--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   encrypt: ^5.0.3
   intl: ^0.19.0
   mask_text_input_formatter: ^2.9.0
+  json_serializable: ^6.8.0
+  build_runner: ^2.4.9
 
 dev_dependencies:
   flutter_test:
