--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   json_serializable: ^6.8.0
   build_runner: ^2.4.9
+  equatable: ^2.0.5
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
