--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   build_runner: ^2.4.9
   equatable: ^2.0.5
   dartz: ^0.10.1
+  flutter_bloc: ^8.1.5
+  bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
