--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   dartz: ^0.10.1
   flutter_bloc: ^8.1.5
   bloc: ^8.1.4
+  get_it: ^7.7.0
+  injectable: ^2.4.2
+  injectable_generator: ^2.6.1
 
 dev_dependencies:
   flutter_test:
