--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   injectable: ^2.4.2
   injectable_generator: ^2.6.1
   shared_preferences: ^2.2.3
+  path_provider: ^2.1.3
+  cookie_jar: ^4.0.8
 
 dev_dependencies:
   flutter_test:
